--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -93,3 +93,18 @@ p, a, ul, li {
 .links {
 	padding: 1.2em 2.4em;
 }
+
+.main-button {
+	color: white;
+	background: black;
+	padding: 2.4em;
+}
+
+.button {
+	border: 2px solid black;
+	padding: 2.4em;
+}
+
+.signature {
+	color: lightgray;
+}
