--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -94,13 +94,13 @@ p, a, ul, li {
 	padding: 1.2em 2.4em;
 }
 
-.main-button {
+a.main-button {
 	color: white;
 	background: black;
 	padding: 2.4em;
 }
 
-.button {
+a.button {
 	border: 2px solid black;
 	padding: 2.4em;
 }
