--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -98,13 +98,13 @@ a.main-button {
 	color: white;
 	background: black;
 	padding: 1.2em 2.4em;
-	margin: 1em auto;
+	margin: 2em auto;
 }
 
 a.button {
 	border: 2px solid black;
-	padding: 2.4em;
-	margin: 1em auto;
+	padding: 1.2em 2.4em;
+	margin: 2em auto;
 }
 
 .signature {
