--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -95,16 +95,21 @@ p, a, ul, li {
 }
 
 a.main-button {
-	color: white;
 	background: black;
+	color: white;
+	font-weight: 600;
 	padding: 1.2em 2.4em;
 	margin: 2em auto;
+	width: auto;
+	height: auto;
 }
 
 a.button {
 	border: 2px solid black;
 	padding: 1.2em 2.4em;
 	margin: 2em auto;
+	width: auto;
+	height: auto;
 }
 
 .signature {
