--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -99,16 +99,16 @@ a.main-button {
 	color: white;
 	font-weight: 600;
 	padding: 1.2em 2.4em;
-	margin: 2em auto;
-	width: auto;
+	margin: 4em auto;
+	width: 100%;
 	height: auto;
 }
 
 a.button {
 	border: 2px solid black;
 	padding: 1.2em 2.4em;
-	margin: 2em auto;
-	width: auto;
+	margin: 4em auto;
+	width: 100%;
 	height: auto;
 }
 
