--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -98,6 +98,7 @@ a.main-button {
 	background: black;
 	color: white;
 	font-weight: 600;
+	display: inline-block;
 	padding: 1.2em 2.4em;
 	width: 100%;
 	height: auto;
@@ -107,6 +108,7 @@ a.button {
 	border: 2px solid black;
 	font-weight: 400;
 	width: 100%;
+	display: inline-block;
 	height: auto;
 	padding: 1.2em 2.4em;
 }
