--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900);
+@import url(http://fonts.googleapis.com/css?family=Montserrat:700);
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -52,8 +53,8 @@ table {
 /* HTML5 display-role reset for older browsers */
 
 h1 {
-	font-family: 'Raleway';
-	font-weight: 800;
+	font-family: 'Montserrat';
+	font-weight: 700;
 	font-size: 2em;
 	letter-spacing: .20em;
 	line-height: 2.4em;
