--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -123,7 +123,7 @@ a.button {
 	padding: 1.2em 2.4em;
 }
 a.button:hover {
-	border: solid gray;
+	border: 2px solid gray;
 	color: gray;
 	transition: .32s;
 }
